k8s/ingresses/flexo-mms-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 256m
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-next-upstream-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
  name: flexo-mms-ingress
  namespace: flexo-mms
spec:
  rules:
  - host: flexo-mms.openmbee.org
    http:
      paths:
      - backend:
          service:
            name: flexo-mms-layer-1-service
            port:
              number: 8080
        path: /
        pathType: ImplementationSpecific
      - backend:
          service:
            name: flexo-mms-sso-auth-service
            port:
              number: 8080
        path: /sso
        pathType: ImplementationSpecific
      - backend:
          service:
            name: flexo-mms-auth-service
            port:
              number: 8080
        path: /login
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - flexo-mms.openmbee.org
    secretName: flexo-mms
